# ticket

./: .gitignore  README.md  build-binaries.sh  go.mod  go.sum  guardian-dashboard.json  guardian.go  onxx.py  package-lock.json  package.json  restart-lgtm.sh  rules.json  rules.yaml  start-lgtm.sh
cmd/guardian/: api.go  main.go
dist_python/: README.md
dist_python/guardian_ai/: README.md  pyproject.toml
dist_python/guardian_ai/guardian_ai/: __init__.py  cli.py  guardian.py
examples/mock-node-app/: package-lock.json  package.json
examples/mock-node-app/src/: client-test.js  guardian_rules.json  mock-ai-service.js  mock-llm-server.js  server.js
examples/mock-python-app/: requirements.txt
examples/mock-python-app/src/: client_test.py  guardian_rules.json  mock_ai_service.py  mock_llm_server.py  run.py  server.py
examples/ticket-react-example/: package-lock.json  package.json
examples/ticket-react-example/components/: ticket.tsx
frontend/: package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  index.js  styles.css
frontend/src/components/: Dashboard.js  FlaggedRequests.js  Navigation.js  RequestDetail.js  Settings.js
pkg/analyzer/: analyzer.go
pkg/budget/: budget.go
pkg/dashboard/: dashboard.go  dashboard_missing_test.go  dashboard_test.go
pkg/dashboard/templates/: dashboard.html  metrics.html
pkg/llm/: llm.go  mock_server.go
pkg/middleware/: cost_analytics.go  cost_analytics_test.go  middleware.go
pkg/monitoring/: monitor.go
pkg/telemetry/: telemetry.go  telemetry_test.go
(+3 files in other folders)
