[tool.poetry]
name = "ticketai"
version = "0.1.0"
description = "AI FinOps for Python"
authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
readme = "README.md"
packages = [{include = "guardian_ai"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.105.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"
pydantic = "^2.5.2"
psutil = "^5.9.6"  # For finding free ports

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
guardian-ai = "guardian_ai.cli:main"
